<resources>
    <string name="app_name">RUOK</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="user_name">User name:</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="new_sign_up">\n Sign up</string>
    <string name="password">Password:</string>
    <string name="gender">Gender:</string>
    <string name="confirm_password">Confirm password:</string>
    <string name="email">Email:</string>
    <string name="save">save</string>
    <string name="change_password">\n Reset password</string>
    <string name="user"> \n    User name</string>
    <string name="add_new">add record</string>
    <string name="character">at least 8 characters</string>
    <string name="my_profile">\n My profile</string>
    <string name="title_activity_map">Map</string>
    <string name="add_record">Add record</string>
    <string name="location">Location</string>
    <string name="enter_text">enter text</string>
    <string name="add_image">add image</string>
    <string name="confirm">CONFIRM</string>
    <string name="add_Rrecord">Add Record</string>
    <string name="what_s_wrong_title">What\'s wrong (title):</string>
    <string name="body_location">Body location:</string>
    <string name="date">Date:</string>
    <string name="more_detail">More detail:</string>

    <string name="max_300characters">max 300characters</string>
    <string name="max_30characters">max 30characters</string>
    <string name="Llocation">Location:</string>
    <string name="patient_name_1">Patient name 1</string>
    <string name="patient_name_2">Patient name 2</string>
    <string name="view">VIEW</string>
    <string name="descp">Description</string>

    <string name="add_a_patient">ADD A PATIENT</string>
    <string name="care_provider_dr_smith">Care provider: Dr Smith</string>
    <string name="search">Search</string>
    <string name="reset_password">Reset Password</string>
    <string name="patient_mary">Patient: Mary</string>
    <string name="problem">Problem</string>
    <string name="record1">Record1</string>
    <string name="name_patient1">Name: patient1</string>
    <string name="doctor_dr_smith">Doctor: Dr Smith</string>
    <string name="comment">Comment:</string>
    <string name="browseBodyLocationPhoto">browseBodyLocationPhoto</string>
    <string name="back">BACK</string>
    <string name="add_a_comment">ADD A COMMENT</string>
    <string name="add_a_problem">Add Problem</string>
    <string name="ProblemTitle">Problem Title</string>
    <string name="button">Button</string>
    <string name="hintforusername">at least 8 characters</string>
    <string name="hintforrecord">max 30 characters</string>
    <string name="hintforproblemdescp">max 300 characters</string>
    <string name="editproblem">Edit</string>
    <string name="viewgelo">View Geolocation</string>
    <string name="deleteproblem">Delete</string>
    <string name="viewgeolocation">View Location</string>


    <string name="map_app_name">Current Place Details</string>
    <string name="title_activity_maps">Current Place Details</string>
    <string name="default_info_title">Default Location</string>
    <string name="default_info_snippet">No places found, because location permission is disabled.</string>
    <string name="option_get_place">Get place</string>
    <string name="pick_place">Choose a place</string>
    <string name="add_body_location_photo">addBodyLocationPhoto</string>
    <string name="body_location_photo">bodyLocationPhoto</string>
    <string name="body_part_input">bodyPart</string>
    <string name="DELETE">Delete</string>
    <string name="savePhoto">savePhoto</string>
    <string name="add_Photo">addBodyPhoto</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_problem">Problem</string>
    <string name="title_me">Me</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>