
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="0dp"
    android:paddingRight="0dp"
    android:paddingTop="0dp"
    android:paddingBottom="0dp"
    tools:context=".activities.MainActivity"
    android:background="@drawable/background2">


    <EditText
        android:id="@+id/userName"
        android:layout_width="302dp"
        android:layout_height="65dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="228dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/user_name"
        android:typeface="monospace" />

    <Button
        android:id="@+id/SignIn"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="138dp"
        android:layout_height="52dp"
        android:layout_above="@+id/SignUp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/frame2"
        android:lineSpacingExtra="12sp"
        android:onClick="SignIn"
        android:text="@string/sign_in"
        android:textColor="@android:color/background_dark"
        android:textSize="18sp"
        android:textStyle="bold|italic"
        tools:text="@string/sign_in" />

    <Button
        android:id="@+id/SignUp"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="137dp"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="43dp"
        android:background="@drawable/frame2"
        android:lineSpacingExtra="12sp"
        android:onClick="SignUp"
        android:text="@string/sign_up"
        android:textColor="@android:color/background_dark"
        android:textSize="18sp"
        android:textStyle="bold|italic"
        tools:text="@string/sign_up" />

    <EditText
        android:id="@+id/password"
        android:layout_width="304dp"
        android:layout_height="64dp"
        android:layout_below="@+id/userName"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="-228dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/password"
        android:typeface="monospace" />

</RelativeLayout>