<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="0dp"
    android:paddingRight="0dp"
    android:paddingTop="0dp"
    android:paddingBottom="0dp"
    tools:context=".activities.AddRecordActivity"
    android:background="@drawable/case1"
    >

    <TextView
        android:id="@+id/addPatientText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:text="@string/add_a_patient"
        android:textColor="@android:color/background_dark"
        android:textSize="30sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/text0"
        android:layout_width="105dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="45dp"
        android:layout_marginTop="108dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/user" />

    <Button
        android:id="@+id/addProblemBack"
        android:layout_width="142dp"
        android:layout_height="54dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="64dp"
        android:background="@drawable/frame2"
        android:text="@string/save"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/doctorAddPatientName"
        android:layout_width="113dp"
        android:layout_height="44dp"
        android:layout_alignBottom="@+id/text0"
        android:layout_alignEnd="@+id/addPatientText"
        android:text="TextView" />

</RelativeLayout>