<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.CareProviderViewRecordDetailsActivity">
    <EditText
        android:id="@+id/recordDetailsRecord"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/record1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/recordDetailsPatient"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="119dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/name_patient1"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="75dp" />

    <EditText
        android:id="@+id/recordDetailsCareprovider"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/recordDetailsEmail"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="-229dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/doctor_dr_smith"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="151dp" />

    <EditText
        android:id="@+id/recordDetailsDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="178dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="Date"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="223dp" />

    <EditText
        android:id="@+id/recordDetailsComment"
        android:layout_width="284dp"
        android:layout_height="42dp"
        android:layout_above="@+id/recordDetailsDate"
        android:layout_alignParentStart="true"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/comment"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="401dp" />

    <EditText
        android:id="@+id/recordDetailsPhoneNumber"
        android:layout_width="284dp"
        android:layout_height="42dp"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="Location: "
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="349dp" />

    <EditText
        android:id="@+id/recordDetailsEmail"
        android:layout_width="284dp"
        android:layout_height="42dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="229dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="Body location："
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="296dp" />

</RelativeLayout>